tests/errors/runtime/002.ura
// errors/runtime/002 — calling a null (zero-init) function value crashes

main():
    f fn(int) int
    return f(21)